--- a/ui/src/components/cluster-resources/cluster-resources.scss
+++ b/ui/src/components/cluster-resources/cluster-resources.scss
@@ -22,3 +22,7 @@
     color: #fff;
   }
 }
+
+.card-inner {
+  position: relative;
+}
